--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
 * {
 	padding: 0;
 	margin: 0;
+  box-sizing: border-box;
+}
+.container {
+  width: 600px;
+  margin: 0 auto;
+  background-color: rgb(255, 255, 255);
+  border-radius: 40px;
+  -webkit-box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+}
+#img {
+  align-self: center;
+  width: 550px;
+  height: 600px;
+  margin: 25px;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 98px 0px rgba(0,0,0,0.75);
+}
+#btn {
+  width: 180px;
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 40px;
+  color: white;
+  background-color: rgb(55, 8, 143);
+  outline: none;
+  font-size: 20px;
+}
+#btn:hover {
+  opacity: 0.5;
+  background-color: blue;
+}
+.btn {
+  width: 180px;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
